fixed flickering issue

--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,7 @@ html::-webkit-scrollbar {
 
 #fetn {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .titleArr {
